# BLIT-based_sinewave_hardsync

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  test.py  test.rb  test_plot.py
NewProject/: NewProject.jucer
NewProject/Builds/MacOSX/: .gitignore  Info-AU.plist  Info-VST.plist  Info.plist
NewProject/Builds/VisualStudio2015/: NewProject.sln  NewProject.vcxproj  NewProject.vcxproj.filters  NewProject_SharedCode.vcxproj  NewProject_VST.vcxproj  (+3 more)
NewProject/JuceLibraryCode/: AppConfig.h  JuceHeader.h
NewProject/Source/: BLITSineHardSync_processor.cpp  BLITSineHardSync_processor.h  BLITSineHardSync_sound.cpp  BLITSineHardSync_sound.h  BLITSineHardSync_voice.cpp  BLITSineHardSync_voice.h  PluginProcessor.cpp  PluginProcessor.h
VST3 SDK/: README.md
sample/: .gitignore  BLITSineHardSync.def  BLITSineHardSync.sln  BLITSineHardSync.vcxproj  BLITSineHardSync.vcxproj.filters  BLITSineHardSync_controller.cpp  BLITSineHardSync_controller.h  BLITSineHardSync_entry.cpp  BLITSineHardSync_guids.h  BLITSineHardSync_oscillator.cpp  BLITSineHardSync_oscillator.h  BLITSineHardSync_processor.cpp  BLITSineHardSync_processor.h  BLIT_based_sinewave_hardsync_oscillator.cpp  BLIT_based_sinewave_hardsync_oscillator.h  BLIT_based_sinewave_hardsync_oscillator_note.cpp  BLIT_based_sinewave_hardsync_oscillator_note.h
source/: BLITSineHardSync_controller.cpp  BLITSineHardSync_controller.h  BLITSineHardSync_entry.cpp  BLITSineHardSync_guids.h  BLITSineHardSync_oscillator.cpp  BLITSineHardSync_oscillator.h  BLITSineHardSync_processor.cpp  BLITSineHardSync_processor.h
vstsdk3/: README.md
(+8 files in other folders)
